FC-T245 fix action buttons alignment

--- a/src/app/components/filter/filter.component.scss
+++ b/src/app/components/filter/filter.component.scss
@@ -119,6 +119,11 @@ fs-filter {
     }
   }
 
+  .filter-actions {
+    display: flex;
+    align-items: baseline;
+  }
+
   .infinite-records {
     color: #999;
     font-size: 13px;
